--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,9 @@
 html,
 body {
   height: 100%;
+    overflow-y: auto;
   overscroll-behavior: contain;
+  -webkit-overflow-scrolling: touch;
 }
 
 #root {
